--- a/app/index.html
+++ b/app/index.html
@@ -42,10 +42,6 @@
     <script src="lib/bootstrap/bootstrap.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers/controller.js"></script>
-    <script src="js/services/service.js"></script>
-    <script src="js/directives/directive.js"></script>
-    <script src="js/filters/filter.js"></script>
+    <script src="dist/app.js"></script>
   </body>
 </html>
