--- a/app/index.html
+++ b/app/index.html
@@ -10,29 +10,10 @@
 
     <title>Project</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="dist/css/style.css" rel="stylesheet">
   </head>
   
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#/">Template</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#/">Menu</a></li>
-                    <li><a href="#/">Menu</a></li>
-
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Right</a></li>
-                </ul>
-                    
-            </div>
-        </div>
-    </div>
 
     <div class="container">
 
@@ -41,7 +22,7 @@
     <script src="lib/jquery/jquery-2.0.3.min.js"></script>
     <script src="lib/bootstrap/bootstrap.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/angular/angular-route.min.js"></script>
-    <script src="dist/app.js"></script>
+    <script src="lib/angular/angular-ui-router.min.js"></script>
+    <script src="dist/js/app.js"></script>
   </body>
 </html>
