--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,7 @@
   
   <body>
 
-    <div class="container">
-
+    <div class="container" ui-view>
     </div>
 
     <script src="lib/jquery/jquery-2.0.3.min.js"></script>
